<resources>
    <string name="app_name">Cajero</string>

    <string name="action_settings">Settings</string>

    <string name="home_item">Home</string>
    <string name="retiro_item">Retiro</string>
    <string name="deposito_item">Deposito</string>
    <string name="transferencia_item">Transferencia</string>
    <string name="cambiarpin_item">Cambiar PIN</string>
    <string name="log_out_item">Cerrar Sesión</string>
    <string name="configuracion_item">Configuración</string>
</resources>
