<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home_item" />
        <item
            android:id="@+id/nav_retiro"
            android:icon="@drawable/ic_reply"
            android:title="@string/retiro_item" />
        <item
            android:id="@+id/nav_deposito"
            android:icon="@drawable/ic_share"
            android:title="@string/deposito_item" />
        <item
            android:id="@+id/nav_transferencia"
            android:icon="@drawable/ic_swap_horizontal"
            android:title="@string/transferencia_item" />
        <item
            android:id="@+id/nav_cambiarpin"
            android:icon="@drawable/ic_key_variant"
            android:title="@string/cambiarpin_item" />

        <!-- Sección de configuración -->
        <item
            android:id="@+id/configuration_section"
            android:title="@string/configuracion_item">
            <menu>
                <item
                    android:id="@+id/nav_log_out"
                    android:icon="@android:drawable/ic_lock_power_off"
                    android:title="@string/log_out_item" />
            </menu>
        </item>
    </group>
</menu>